# jextract

./: .gitignore  Dockerfile  Makefile  README.md  build.gradle  build_jextract.sh  compile_flags.txt  gradlew  test.h
.github/: pull_request_template.md
.github/workflows/: release-binaries.yaml  test.yml
.jcheck/: conf
doc/: GUIDE.md
make/: Build.gmk  Common.gmk  Init.gmk  NativeCompilation.gmk  RunTestsPrebuilt.gmk
make/devkit/: createLibclangBundle.sh
samples/: README.md  cleanall.sh  compileall.sh  compilesourceall.sh  shared_windows.ps1
samples/cblas/: TestBlas.java  compile.sh  compile_windows.ps1  compilesource.sh  run.sh  run_windows.ps1
samples/dlopen/: Dlopen.java  compile.sh  compilesource.sh  hello.c  run.sh
samples/go/: Main.java  compile.sh  compilesource.sh  main.go  run.sh
samples/helloworld/: HelloWorld.java  compile.sh  compilesource.sh  helloworld.c  helloworld.h  run.sh
samples/lapack/: TestLapack.java  compile.sh  compile_windows.ps1  compilesource.sh  run.sh  run_windows.ps1
samples/libclang/: ASTPrinter.java  README  compile.sh  compile_windows.ps1  compilesource.sh  hello.c  run.sh  run_windows.ps1
samples/libcurl/: CurlMain.java  compile.sh  compile_windows.ps1  compilesource.sh  run.sh  run_windows.ps1
samples/libffmpeg/: LibffmpegMain.java  README  compile.sh  compilesource.sh  libffmpeg.h  run.sh
samples/libgit2/: GitClone.java  README  compile.sh  compile_windows.ps1  compilesource.sh  run.sh  run_windows.ps1
samples/libjimage/: JImageFile.java  README.md  compile.sh  compilesource.sh  extract.sh  jimage.h  run.sh
samples/libproc/: LibprocMain.java  compile.sh  compilesource.sh  run.sh
samples/libzstd/: LibzstdMain.java  README  compile.sh  compilesource.sh  run.sh
samples/lp_solve/: LpSolveDemo.java  compile.sh  compilesource.sh  run.sh
samples/onnx/: OnnxGenerator.java  README.md  compile.sh  run.sh
samples/opencl/: .gitignore  CLWrap.java  GLWrap.java  NBody.java  compile.sh  (+1 more)
test/: TEST.ROOT  TEST.groups
test/test-support/: CMakeLists.txt
updateclang/: README.md  clang.full.symbols  clang.symbols  cp_header.txt  extract.sh
(+613 files in other folders)
